--- a/public/CircularNavigation/index.html
+++ b/public/CircularNavigation/index.html
@@ -25,14 +25,13 @@
 
 
 		<div class="container">
-			<nav class="navbar navbar-default navbar-fixed-top" style="background-color: #303030">
+			<nav class="navbar navbar-default navbar-fixed-top" style="background-color:#232323;border:unset;">
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
+				<div class="navbar-header" style="padding: 10px;">
 					<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1"
 					data-toggle="collapse" id="collapser" type="button"><span></span> <span></span> <span></span> <span></span>
-					<span></span> <span></span></button> <a class="navbar-brand" href="#" rel="home"><img style="height: 60px;margin-left:200px;	 " alt="Logo Image" id=
-					"logoXCET" src="logo_sub.png"></a>
+					<span></span> <span></span></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img style="display:block;height: 40px;" alt="Logo Image"  src="logo.png"></a>
 				</div><!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="menu collapse navbar-collapse" id="bs-example-navbar-collapse-1" style=
 				"border-color: black; max-height: unset; height: 1px;">
