--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,10 @@
 <div id="container">
   <header>
         <div style="margin-top: 300px;margin-bottom: 300px;">
-          <p id="greeting" style="font-size: 50px;text-align: center;"></p>
-        <h1 style="text-align: center;">< Disruptive Tech /></h1>  
+          <p id="greeting" style="font-size: 100px;text-align: center;"></p>
+        <h1 style="text-align: center;font-size: 50px;"><span ></span></h1>  
         
-        <h1 style="text-align: center;"></br>24, 25 Feb 2018 </br><span style="color:#cd0000;">!important</span> </h1>
+        <h1 style="text-align: center;" class="spGreen"></br>/* 24, 25 Feb 2018 */ </br><span style="color:#cd0000;">!important</span> </h1>
       </div>
         
 
