template set . phew

--- a/public/workshopTEMP.html
+++ b/public/workshopTEMP.html
@@ -25,28 +25,16 @@
       body{
          font-family: 'Roboto Mono', monospace;  
       }
+
+      @media (max-width: 525px) { 
+      p{
+        font-size: 15px;
+      }  
+}
     </style>
 </head>
 <body>
 
- <!--  <div class="md-modal md-effect-1" id="modal-1">
-=======
-
-  <div class="md-modal md-effect-1" id="modal-1">
->>>>>>> ca1520ba5b2ff4b74b5cd85755d0d2cd3df81132
-      <div class="md-content">
-        <h3>Modal Dialog</h3>
-        <div>
-          <p>This is a modal1 window. You can do the following things with it:</p>
-          <ul>
-            <li><strong>Read:</strong> modal windows will probably tell you something important so don't forget to read what they say.</li>
-            <li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and appreciate its presence.</li>
-            <li><strong>Close:</strong> click on the button below to close the modal.</li>
-          </ul>
-          <button class="md-close">Close me!</button>
-        </div>
-      </div>
-    </div>  MODAL REMOVED -->
 
 	<div id="container">
 
@@ -69,12 +57,14 @@
     </div>
   </nav>
 
-  <div class="row" style="padding-top: 10%;">
+  <div class="row" style="padding-top: 10vh;">
+     <h1 style="text-align: center;"><span class="spGreen">/* Workshop */</span></h1>
   <div class="col-md-4">
   <img src="assets/img/goicon.png" class="img-responsive pull-center">
+  <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a href="#"><span class="spMagenta" >Register_now()</span></a></br></p>
 </div>
 <div class="col-md-7">
-  <div class="item">
+  <div class="item" style="height: unset;">
           
          <div class="controls">
           <div class="control control-left"></div>
@@ -83,15 +73,49 @@
         </div>
             <div class="item-desc">
             
-            <p class="item-heading">Go, Programming Language</p>
-            <p>* Basics of VR</br>
-* Blueprint programming</br>
-* spatial audio in VR</br> 
-* blueprint communication</br>
-* interaction in VR</p>
+            <p class="item-heading">Go, Programming Language </p>
+            <div style="margin-top: 30px;" class ="row">
 
-<p> requirements:* Unreal game engine installed </br>
-* laptop with at least 4GB RAM</p>
+              <div class="col-md-7">
+              <p ><span class="spGreen" >//About</span></br>
+              Go is a general-purpose programing language created by Google and contributed by open source communities. Go is powering cloud infrastructure and Blockchain systems. Most of the blockchain network is developed in Go and one of the powerful language to build backend systems, APIs and network components at scale and efficiency.
+              </p>
+              </div>
+
+              <div class="col-md-4">
+              <p><span class="spMagenta">#Date and timing</span></br>24th February 2018</br>9:00 AM to 12:00 PM</br>1:00 PM to 4:00 PM</p>
+              </div>
+
+          </div>
+          <p><span class="spGreen">/*-----------------------------------------------------------*/</span></p> 
+          <div style="margin-top: 30px;" class ="row">
+
+              <div class="col-md-4">
+              <p ><span class="spPurple" > >>>Pre-Requisites</span></br>* Ubuntu or Mac</br>* Interest</br></p>
+              </div>
+
+              <div class="col-md-4">
+              <p><span class="spMagenta">install_these()</span></br>
+              <a href=" https://golang.org/doc/install#install">* Go</a> </br><a href=" https://atom.io/">* Atom</a></br><a href="https://atom.io/packages/go-plus">* Package- Go plus</a></p>
+              </div>
+              <div class="col-md-4">
+              <p><span class="spOrange">Classes handled by</span></br>* Tittu Varghese</br><a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a></p>
+              </div>
+
+          </div>
+          <p><span class="spGreen">/*-----------------------------------------------------------*/</span></p>
+          <div style="margin-top: 30px;" class ="row">
+
+
+              <div class="col-md-6">
+              <p style="font-size: 30px;margin-top: 20px;"><a href="#"><span class="spMagenta" >Register_now()</span></a></br></p>
+              </div>
+
+              <div class="col-md-6">
+              <p ><span class="spPurple" >//Contact</span></br>* Joyce - 94978 17939</br>* Rehna - 97465 29737</br></p>
+              </div>
+
+          </div>
             <!-- <button class="md-trigger" data-modal="modal-1">Fade in &amp; Scale</button>
             -->
           </div>
