--- a/public/wsEthical.html
+++ b/public/wsEthical.html
@@ -60,8 +60,9 @@
   <div class="row" style="padding-top: 10vh;">
      <h1 style="text-align: center;"><span class="spGreen">/* Workshop */</span></h1>
   <div class="col-md-4">
-  <img src="assets/img/blockchainicon.png" class="img-responsive pull-center">
-  <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a href="#"><span class="spMagenta" >Register_now()</span></a></br></p>
+  <img src="assets/img/ethicalicon.png" class="img-responsive pull-center">
+  <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
+  <!-- <button  class="tsbutton">Register Now</button> --><noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
 </div>
 <div class="col-md-7">
   <div class="item" style="height: unset;">
@@ -73,19 +74,17 @@
         </div>
             <div class="item-desc">
             
-            <p class="item-heading">Blockchain</p>
+            <p class="item-heading">Ethical Hacking </p>
             <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-7">
-              <p ><span class="spGreen" >//About</span></br>              
-A blockchain, originally block chain, is a continuously growing list of records, called blocks, which are linked and secured using cryptography. Each block typically contains a cryptographic hash of the previous block, a timestamp and transaction data. By design, a blockchain is inherently resistant to modification of the data.
-
-
+              <p ><span class="spGreen" >//About</span></br>
+              Hacking is the act of finding the possible entry points that exist in a computer system or a computer network and finally entering into them.Hacking is usually legal as long as it is being done to find weaknesses in a computer or network system for testing purpose. This sort of hacking is what we call Ethical Hacking.
               </p>
               </div>
 
-              <div class="col-md-5">
-              <p><span class="spMagenta">#Date and timing</span></br>25th February 2018</br>9:00 AM to 1:00 PM </br>2:00 PM to 6:00 PM</p>
+              <div class="col-md-4">
+              <p><span class="spMagenta">#Date and timing</span></br>24th February 2018</br>9:30 AM to 12:30 PM</br>1:30 PM to 4:30 PM</p>
               </div>
 
           </div>
@@ -93,15 +92,16 @@ A blockchain, originally block chain, is a continuously growing list of records,
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-4">
-              <p ><span class="spPurple" > >>>Pre-Requisites</span></br>* </br>* CS ISSTAM</br></p>
+              <p ><span class="spPurple" > >>>Pre-Requisites</span></br>* Windows (64bit) </br>* 4GB RAM (8 Recommended)
+              </br>* USB Drive</br></p>
               </div>
 
               <div class="col-md-4">
               <p><span class="spMagenta">install_these()</span></br>
-              <a href="#">* </a> </br><a href="#">*</a></br></p>
+              <a href="https://www.virtualbox.org/wiki/Downloads">* Virtual box</a></p>
               </div>
               <div class="col-md-4">
-              <p><span class="spOrange">Classes handled by</span></br>* Gokul Baby Alex</br><a href="https://in.linkedin.com/in/gokulbabyalex">::check_this_out()</a></p>
+              <p><span class="spOrange">Classes handled by</span></br>* Nandu R </br><!-- <a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a> --></p>
               </div>
 
           </div>
@@ -110,11 +110,11 @@ A blockchain, originally block chain, is a continuously growing list of records,
 
 
               <div class="col-md-6">
-              <p style="font-size: 30px;margin-top: 20px;"><a href="#"><span class="spMagenta" >Register_now()</span></a></br></p>
+              <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');"><span class="spMagenta" >Register_now()</span></a></br></p>
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Basil Mathai- 70348 77251</br>* Anand Sai - 9495342523</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Akshay  - 99463 75269</br>* Divya Bijli - 94964 38173</br></p>
               </div>
 
           </div>
