--- a/public/workshop/ethical_hacking/index.html
+++ b/public/workshop/ethical_hacking/index.html
@@ -11,16 +11,16 @@
 	<meta name="keywords" content="Dotslash,Dotslash '18,CET,CS Department,Computer Science Department" />
 	<meta name="theme-color" content="#000000" />
 	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets2/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="assets2/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
- <!--  <script src="assets/js/modernizr.custom.js"></script> -->
+ <!--  <script src="assets2/js/modernizr.custom.js"></script> -->
 
 
-  <link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
-<link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
-<link rel="stylesheet" type="text/css" href="assets/css/component1.css" />
-<script src="assets/js/modernizr-2.6.2.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="assets2/css/normalize.css" />
+<link rel="stylesheet" type="text/css" href="assets2/css/demo.css" />
+<link rel="stylesheet" type="text/css" href="assets2/css/component1.css" />
+<script src="assets2/js/modernizr-2.6.2.min.js"></script>
 <style type="text/css">
       body{
          font-family: 'Roboto Mono', monospace;  
@@ -45,7 +45,7 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header" style="padding: 10px;margin-left: 5vw;">
-        <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" id="collapser" type="button"><span></span> <span></span> <span></span> <span></span> <span></span> <span></span></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img alt="Logo Image" src="assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;"></a>
+        <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" id="collapser" type="button"><span></span> <span></span> <span></span> <span></span> <span></span> <span></span></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img alt="Logo Image" src="assets2/img/logo.png" style="display:block;height: 45px;padding-top: 5px;"></a>
       </div><!-- Collect the nav links, forms, and other content for toggling -->
       <div class="menu collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border-color: black; max-height: unset; height: 1px;">
         <ul class="nav navbar-nav navbar-right">
@@ -60,7 +60,7 @@
   <div class="row" style="padding-top: 10vh;">
      <h1 style="text-align: center;"><span class="spGreen">/* Workshop */</span></h1>
   <div class="col-md-4">
-  <img src="assets/img/ethicalicon.png" class="img-responsive pull-center">
+  <img src="assets2/img/ethicalicon.png" class="img-responsive pull-center">
   <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
   <!-- <button  class="tsbutton">Register Now</button> --><noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
 </div>
@@ -114,7 +114,7 @@
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Akshay  - 99463 75269</br>* Divya Bijli - 94964 38173</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Akshay Sebastian - 9946375269</br>* Divya B - 9496438173</br></p>
               </div>
 
           </div>
@@ -142,9 +142,9 @@
       </div>
 
 </div>
-<script src="assets/js/polyfills.js"></script>
-    <script src="assets/js/demo1.js"></script>
-<script src="assets/js/colorAnim.js"></script>
+<script src="assets2/js/polyfills.js"></script>
+    <script src="assets2/js/demo1.js"></script>
+<script src="assets2/js/colorAnim.js"></script>
 </div></div>
 
 	
