--- a/public/workshops/index.html
+++ b/public/workshops/index.html
@@ -88,7 +88,7 @@
           </div>
      </div>
      <div class="col-md-3 col-sm-3">
-      <div class="item" style="height: unset;" onclick="location.href='../workshop/golang/index.html';">
+      <div class="item" style="height: unset;" onclick="location.href='../workshop/golang/';">
           
          <div class="controls">
           <div class="control control-left"></div>
@@ -103,7 +103,7 @@
           </div>
      </div>
      <div class="col-md-3 col-sm-3 col-sm-3">
-      <div class="item" style="height: unset;" onclick="location.href='../workshop/ethical_hacking/index.html';">
+      <div class="item" style="height: unset;" onclick="location.href='../workshop/ethical_hacking/';">
           
          <div class="controls">
           <div class="control control-left"></div>
