--- a/public/workshop/machine_learning/index.html
+++ b/public/workshop/machine_learning/index.html
@@ -61,7 +61,8 @@
      <h1 style="text-align: center;"><span class="spGreen">/* Workshop */</span></h1>
   <div class="col-md-4">
   <img src="assets4/img/mlicon.png" class="img-responsive pull-center">
-  <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a href="#"><span class="spMagenta" >Register_now()</span></a></br></p>
+ <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
+  <!-- <button  class="tsbutton">Register Now</button> --><noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
 </div>
 <div class="col-md-7">
   <div class="item" style="height: unset;">
@@ -100,8 +101,8 @@ The workshop  deals with artificial neural networks and support vector machines 
               <a href="https://www.python.org/">*Python 2.7 or 3+</a> </br><a href="https://www.anaconda.com/download/">*Anaconda</a></br></p>
               </div>
               <div class="col-md-4">
-              <p><span class="spOrange">Classes handled by</span></br>* Sumesh Chandran</br><a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a>
-              </br>* Vishnu</br><a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a></p>
+              <p><span class="spOrange">Classes handled by</span></br>* Sumesh Chandran<!--</br><a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a>-->
+              </br>* Vishnu</br><!--<a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a>--></p>
               </div>
 
           </div>
@@ -110,7 +111,7 @@ The workshop  deals with artificial neural networks and support vector machines 
 
 
               <div class="col-md-6">
-              <p style="font-size: 30px;margin-top: 20px;"><a href="#"><span class="spMagenta" >Register_now()</span></a></br></p>
+              <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');"><span class="spMagenta" >Register_now()</span></a></br></p>
               </div>
 
               <div class="col-md-6">
