--- a/public/workshops/index.html
+++ b/public/workshops/index.html
@@ -57,6 +57,7 @@
 
   <div class="row" style="padding-top: 10vh;">
      <h1 style="text-align: center;"><span class="spGreen">/* Workshops */</span></h1>
+     <h2 style="margin-left: 5vw;"><span class="spMagenta">//lunch'll be provided</span></h2>
      <div class="col-md-3 col-sm-3">
       <div class="item" style="height: unset;" onclick="location.href='../workshop/blockchain/index.html';">
           
