--- a/public/workshops/index.html
+++ b/public/workshops/index.html
@@ -63,7 +63,7 @@
      <h1 style="text-align: center;"><span class="spGreen">/* Workshops */</span></h1>
      <!-- <h2 style="margin-left: 5vw;"><span class="spMagenta">//lunch'll be provided</span></h2> -->
      <div class="col-md-3 col-sm-3">
-      <div class="item" style="height: unset;" onclick="location.href='../workshop/blockchain/index.html';">
+      <div class="item" style="height: unset;" onclick="location.href='../workshop/blockchain/';">
           
          <div class="controls">
           <div class="control control-left"></div>
@@ -78,7 +78,7 @@
           </div>
         </div>
      <div class="col-md-3 col-sm-3">
-        <div class="item" style="height: unset;" onclick="location.href='../workshop/machine_learning/index.html';">
+        <div class="item" style="height: unset;" onclick="location.href='../workshop/machine_learning/';">
           
          <div class="controls">
           <div class="control control-left"></div>
