golang to golanguage

--- a/public/workshops/index.html
+++ b/public/workshops/index.html
@@ -88,7 +88,7 @@
         </div>
             <div class="item-desc">
             <img style="height: unset;" src="../assets/img/goicon.png" class="img-responsive pull-center">
-            <p class="item-heading">Golang</p>
+            <p class="item-heading">Go Language</p>
             
             </div>
           </div>
