--- a/public/workshops/index.html
+++ b/public/workshops/index.html
@@ -10,7 +10,7 @@
 
 	<meta name="keywords" content="Dotslash,Dotslash '18,CET,CS Department,Computer Science Department" />
 	<meta name="theme-color" content="#000000" />
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="../ds.png">
 	<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
