added disruptive t-rex

--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -52,7 +52,7 @@
 
 <div id="container">
   <header>
-        <div style="margin-top: 300px;margin-bottom: 300px;">
+        <div style="margin-top: 300px;margin-bottom: 150px;">
           <p id="greeting" style="font-size: 100px;text-align: center;"></p>
         <h1 style="text-align: center;font-size: 50px;"><span ></span></h1>  
         
@@ -79,9 +79,16 @@
       </div>
     </div>
   </nav>
+  <div class="row">
+    <div class="col-md-4">
+      <img src="assets/img/t-rex.png" style="height: 350px;left: 5vw;">
+    </div>
 
-
-
+    <div class="col-md-8">
+      <h1 class="spPurple" style="padding-left: 15vw;">./disruption</h1>
+      <p></p>
+    </div>
+  </div>
   <div class="row" style="padding-top: 10vh;">
      <h1 style="text-align: center;"><span class="spGreen">/* Workshops */</span></h1>
      <!-- <h2 style="margin-left: 5vw;"><span class="spMagenta">//lunch'll be provided</span></h2> -->
