searching for events

--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -80,15 +80,38 @@
     </div>
   </nav>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-xs-4">
       <img src="assets/img/t-rex.png" style="height: 350px;left: 5vw;">
     </div>
 
-    <div class="col-md-8">
-      <h1 class="spPurple" style="padding-left: 15vw;">./disruption</h1>
+    <div class="col-md-8 col-xs-8">
+      <h2 class="spPurple" style="padding-left: 15vw;">./disruptive_tech</h2>
+      <h2 class="spMagenta" style="padding-left: 17vw;">Hello Bitcoin</h2>
+      <h2 class="spYellow" style="padding-left: 17vw;">Hello Virtual Reality</h2>
+      <h2 class="spPurple" style="padding-left: 17vw;">Hello USB-C</h2>
+      <h2 class="spGreen" style="padding-left: 17vw;">Hello Assistant</h2>
+      <h2 class="spMagenta" style="padding-left: 17vw;">Hello Something</h2>
+      <h2 class="spGreen" style="padding-left: 17vw;">...</h2>
       <p></p>
     </div>
   </div>
+
+ <div class="row" style="padding-top: 50px;">
+    
+    <div class="col-md-6" style="padding-left: 10vw;">
+      <h2 class="spPurple" >//Events</h2>
+      <h1 class="spMagenta">Hello Bitcoin</h1>
+      <h1 class="spYellow"">Hello Virtual Reality</h1>
+      <h1 class="spPurple"">Hello USB-C</h1>
+      <h1 class="spGreen"">Hello Assistant</h1>
+      <p></p>
+    </div>
+  <div class="col-md-4">
+      <img src="assets/img/t-rex.png" style="height: 350px;left: 5vw;">
+    </div>  
+
+</div>
+
   <div class="row" style="padding-top: 10vh;">
      <h1 style="text-align: center;"><span class="spGreen">/* Workshops */</span></h1>
      <!-- <h2 style="margin-left: 5vw;"><span class="spMagenta">//lunch'll be provided</span></h2> -->
