moncy white aaak numbers!

--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -25,6 +25,18 @@
       body{
          font-family: 'Roboto Mono', monospace;  
       }
+
+      .line-numbers{
+            z-index: 0;
+    position: absolute;
+    left: 8px;
+    top: 100px;
+    width: 16px;
+    height: 100%;
+    background-image: url(assets/img/whiten_This.png);
+    background-repeat: no-repeat;
+
+      }
     </style>
 </head>
 <body>
@@ -47,7 +59,7 @@
         </div>
       </div>
     </div>  MODAL REMOVED -->
-
+ <div class="line-numbers"></div>
 	<div id="container">
 
 <div id="container">
@@ -79,6 +91,7 @@
       </div>
     </div>
   </nav>
+ 
   <div class="row">
     <div class="col-md-4 col-xs-4">
       <img src="assets/img/t-rex.png" style="height: 350px;left: 5vw;">
