--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -341,7 +341,7 @@
 
   </div> -->
 
-  <div class="row" style="margin-left: 0px;">
+  <div class="row" style="margin:auto">
     <div class="col-md-3">
       <div class='box' style="background-color: rgb(28, 28, 27);">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
