--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -74,7 +74,7 @@
 <div id="container">
   <header>
         <div style="margin-top: 300px;margin-bottom: 150px;">
-          <p id="greeting" style="font-size: 100px;text-align: center;"></p>
+          <p id="greeting" style="font-size: 75px;text-align: center;"></p>
         <h1 style="text-align: center;font-size: 50px;"><span ></span></h1>  
         
         <h1 style="text-align: center;" class="spGreen"></br>/* 24, 25 Feb 2018 */ </br><span style="color:#cd0000;">!important</span> </h1>
@@ -89,7 +89,7 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header" style="padding: 10px;margin-left: 5vw;">
-        <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" id="collapser" type="button"><span></span> <span></span> <span></span> <span></span> <span></span> <span></span></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img alt="Logo Image" src="assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;"></a>
+        <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" id="collapser" type="button">navbar/></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img alt="Logo Image" src="assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;"></a>
       </div><!-- Collect the nav links, forms, and other content for toggling -->
       <div class="menu collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border-color: black; max-height: unset; height: 1px;">
         <ul class="nav navbar-nav navbar-right">
@@ -192,10 +192,10 @@
     
     <div class="col-md-6" style="padding-left: 10vw;">
       <h2 class="spPurple" >//Events</h2>
-      <h1 class="spMagenta">Hello Bitcoin</h1>
-      <h1 class="spYellow"">Hello Virtual Reality</h1>
-      <h1 class="spPurple"">Hello USB-C</h1>
-      <h1 class="spGreen"">Hello Assistant</h1>
+      <h2 class="spMagenta">Hello Bitcoin</h2>
+      <h2 class="spYellow"">Hello Virtual Reality</h2>
+      <h2 class="spPurple"">Hello USB-C</h2>
+      <h2 class="spGreen"">Hello Assistant</h2>
       <p></p>
     </div>
   <div class="col-md-4">
