--- a/public/eventTemp.html
+++ b/public/eventTemp.html
@@ -2,19 +2,19 @@
 <html>
 <head>
   
-	<meta charset="UTF-8" />
-	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<meta name="description" content="Technical fest of Computer Science Department, College of Engineering, Trivandrum" />
-	<title>Dotslash '18</title>
+  <meta charset="UTF-8" />
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description" content="Technical fest of Computer Science Department, College of Engineering, Trivandrum" />
+  <title>Dotslash '18</title>
 
 
-	<meta name="keywords" content="Dotslash,Dotslash '18,CET,CS Department,Computer Science Department" />
-	<meta name="theme-color" content="#000000" />
-	<link rel="shortcut icon" href="ds.png">
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+  <meta name="keywords" content="Dotslash,Dotslash '18,CET,CS Department,Computer Science Department" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="shortcut icon" href="ds.png">
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
  <!--  <script src="assets/js/modernizr.custom.js"></script> -->
 
 
@@ -37,7 +37,7 @@
 <body>
 
 
-	<div id="container">
+  <div id="container">
 
 <div id="container">
 
@@ -59,7 +59,7 @@
   </nav>
 
   <div class="row" style="padding-top: 10vh;">
-     <h1 style="text-align: center;"><span class="spPurple">>>>Event()</span></h1>
+     <h1 style="text-align: center;"><span class="spGreen">/* Workshop */</span></h1>
   <div class="col-md-4">
   <img src="assets/img/blockchainicon.png" class="img-responsive pull-center">
  <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
@@ -67,6 +67,7 @@
 </div>
 <div class="col-md-7">
   <div class="item" style="height: unset;">
+    
           
          <div class="controls">
           <div class="control control-left"></div>
@@ -149,6 +150,6 @@ A blockchain, originally block chain, is a continuously growing list of records,
 <script src="assets/js/colorAnim.js"></script>
 </div></div>
 
-	
+  
 </body>
 </html>
