--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -103,7 +103,7 @@
  
   <div class="row">
     <div class="col-md-4 col-xs-4">
-      <img src="assets/img/t-rex.png" style="height: 350px;left: 5vw;">
+      <img src="assets/img/t-rex_m.png" style="height: 350px;left: 5vw;">
     </div>
 
     <div class="col-md-8 col-xs-8">
