events on home set

--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -347,7 +347,9 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <div class='title'>Bitcoin job</div>
+  <img src="assets/img/iconbitcoin.png" style="height: 250px;margin: auto;display: inherit;padding-top: 30px;">
+  <p style="text-align: center;margin-top: 18px;">< Bitcoin_challenge ></p>
+  <p class="prize">prize:20k</p>
 </div>
 
     </div>
@@ -357,7 +359,9 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <div class='title'>Bitcoin job</div>
+   <img src="assets/img/iconwomencoding.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 40px;padding-top: 30px;">
+  <p style="text-align: center;margin-top: 18px;">< Women_coder ></p>
+  <p class="prize">prize:20k</p>
 </div>
 
     </div>
@@ -367,7 +371,9 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <div class='title'>Bitcoin job</div>
+  <img src="assets/img/iconcoding.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <p style="text-align: center;margin-top: 18px;">< code_wars ></p>
+  <p class="prize">prize:11k</p>
 </div>
 
     </div>
@@ -377,29 +383,23 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <div class='title'>Bitcoin job</div>
+  <img src="assets/img/icondebugging.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <p style="text-align: center;margin-top: 18px;">< Debugger ></p>
+  <p class="prize">prize:8k</p>
 </div>
 
     </div>
 
 
 
-    <div class="col-md-3">
+  <div class="col-md-3">
       <div class='box' style="background-color: rgb(28, 28, 27);">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <div class='title'>Bitcoin job</div>
-</div>
-
-    </div>
-
-<div class="col-md-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
-  <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
-  <div class='wave -two'></div>
-  <div class='wave -three'></div>
-  <div class='title'>Bitcoin job</div>
+  <img src="assets/img/iconquiz.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <p style="text-align: center;margin-top: 18px;">< ./Quiz ></p>
+  <p class="prize">prize:20k</p>
 </div>
 
     </div>
@@ -409,7 +409,9 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <div class='title'>Bitcoin job</div>
+  <img src="assets/img/icongaming.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <p style="text-align: center;margin-top: 18px;">< Gaming ></p>
+  <p class="prize">prize:13k</p>
 </div>
 
     </div>
@@ -419,7 +421,21 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <div class='title'>Bitcoin job</div>
+  <img src="assets/img/iconreversecoding.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <p style="text-align: center;margin-top: 18px;">< reverse_coding ></p>
+  <p class="prize">prize:8k</p>
+</div>
+
+    </div>
+
+<div class="col-md-3">
+      <div class='box' style="background-color: rgb(28, 28, 27);">
+  <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
+  <div class='wave -two'></div>
+  <div class='wave -three'></div>
+  <img src="assets/img/icon obscura.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <p style="text-align: center;margin-top: 18px;">< Obscura ></p>
+  <p class="prize">prize:6k</p>
 </div>
 
     </div>
