--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -103,7 +103,7 @@
   </nav>
  
   <div class="row">
-    <div class="col-md-4 col-xs-4">
+    <div class="col-md-4 ">
       <img src="assets/img/t-rex_m.png" id="t-rex">
     </div>
 
@@ -343,6 +343,7 @@
   </div> -->
 
   <div class="row" style="margin:auto">
+    <h1 style="text-align: center;"><span class="spMagenta">< Events ></span></h1>
     <div class="col-md-3 col-sm-3">
       <div class='box' style="background-color: rgb(28, 28, 27);">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
