--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -500,12 +500,18 @@ modal code
 <div class="component">
         <!-Start Nav Structure -->
 
-        <section style="background-color: #303030;-webkit-box-shadow:-1px -2px 20px 0px rgb(36, 33, 36);
-  -moz-box-shadow: -1px -2px 20px 0px rgb(36, 33, 36);
-  box-shadow: -1px -2px 20px 0px rgb(36, 33, 36); margin-top: 70px;padding-top: 50px;padding: 50px;">
+        <section class="foot">
           <div class="row">
-            <div class="col-md-8">njjhjdhfhdh</div>
-            <div class="col-md-4">College of Engineering<br>Trivandrum<br>Event Convenor<br>Harinath R 8289902408</div>
+            <div class="col-md-4 col-xs-12 footerlog">
+              <img src="assets/img/footerimg.png" class="fimg">
+            </div>
+            <div class="col-md-4 col-xs-12">
+              <p>/*Follow us at*/</p>
+              <a href="https://www.facebook.com/dotslashcet/"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/dotslash18/"><i class="fa fa-instagram"></i></a>
+              <a href="mailto:dotslash@cet.ac.in" target="_top"><i class="fa fa-envelope"></i></a>
+              </div>
+            <div class="col-md-4 col-xs-12 footerdesc"><span class="spGreen">//Department of Computer Science<br>and Engineering<br></span><span class="spMagenta">//College of Engineering<br>Trivandrum<br></span><br><span class="spPurple">//Event Convenor<br>Harinath R 8289902408</span></div>
           
         </div>
       </section>
