--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -77,8 +77,8 @@
         <div style="margin-top: 300px;margin-bottom: 150px;">
           <p id="greeting" ></p>
         <h1 style="text-align: center;font-size: 50px;"><span ></span></h1>  
-        
         <h1 style="text-align: center;" class="spGreen dateText"></br>/* 24, 25 Feb 2018 */ </br><span style="color:#cd0000;">!important</span> </h1>
+
       </div>
         
 
@@ -107,7 +107,8 @@
       <img src="assets/img/t-rex_m.png" id="t-rex">
     </div>
 
-    <div class="col-md-8 col-xs-8">
+    <div class="col-md-8 col-xs-12  ">
+      <h2 class="spGreen" style="padding-left: 14vw;">../CET/<span style="background:#4b4b4b;">Computer_Science_Dept</span>/</h2>
       <h2 class="spPurple" style="padding-left: 15vw;">./disruptive_tech</h2>
       <h2 class="spMagenta" style="padding-left: 17vw;">Hello Bitcoin</h2>
       <h2 class="spYellow" style="padding-left: 17vw;">Hello Virtual Reality</h2>
@@ -200,7 +201,7 @@
       <p></p>
     </div>
   <div class="col-md-4">
-      <img src="assets/img/t-rex.png" style="height: 350px;left: 5vw;">
+      <img src="assets/img/isometric.png" style="height: 350px;left: 5vw;">
     </div>  
 
 </div>
