added 6  EVENTS. njan sath

--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -519,7 +519,7 @@ modal code
 <div class="component">
         <!-Start Nav Structure -->
 
-        <section class="foot">
+        <section class="foot" style="background-color: #232323">
           <div class="row">
             <div class="col-md-4 col-xs-12 footerlog">
               <img src="assets/img/footerimg.png" class="fimg">
