--- a/public/evQUiz.html
+++ b/public/evQUiz.html
@@ -61,7 +61,7 @@
   <div class="row" style="padding-top: 10vh;">
      <h1 style="text-align: center;"><span class="spMagenta">< Event ></span></h1>
   <div class="col-md-4">
-  <img src="assets/img/iconbitcoin.png" class="img-responsive pull-center">
+  <img src="assets/img/iconquiz.png" class="img-responsive pull-center">
  <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
   <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
 </div>
@@ -76,19 +76,18 @@
         </div>
             <div class="item-desc">
             
-            <p class="item-heading">Bitcoin_challenge</p>
+            <p class="item-heading">Quiz-CONUNDRUM</p>
             <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-7">
-              <p ><span class="spGreen" >//About</span></br>Cryptocurrency is hidden in a system, the participant has to make use  of the vulnerabilities in the system to access the cryptocurrency. The winner gets it all.
-
+              <p ><span class="spGreen" >//About</span></br>ILLA? ENTH???!
 
 
               </p>
               </div>
 
               <div class="col-md-5">
-              <p><span class="spMagenta">#Date and timing</span></br>24th February 2018</br>9:00 AM to - </br>25th February 2018</br>4:00pm</p>
+              <p><span class="spMagenta">#Date and timing</span></br>25th February 2018</br>12:30 PM to 4:30 PM</p>
               </div>
 
           </div>
@@ -96,10 +95,12 @@
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-8">
-              <p ><span class="spPurple" > >>>Event Rules</span></br>* Teams of two may participate</br>* Please refrain from helping your friends.</br>* There is no other restriction on participation.</p>
+              <p ><span class="spPurple" > >>>Event Rules</span></br>* Cross college teams are allowed.</br>* Participants should have a valid college id card</br>* Reg fee 150 per head</p>
               </div>
-              <div class="col-md-2">
-              <p><span class="spOrange">$Prize</span></p><p></br><span style="font-size:60px;margin-top: 10px;">20k</span></p>
+              <div class="col-md-4">
+              <p><span class="spOrange">$Prizes</span></p><p>* First - <span style="font-size:30px;margin-top: 10px;">5k</span></p>
+              <p>* Second - <span style="font-size:30px;margin-top: 10px;">3k</span></p>
+              <p>* Third - <span style="font-size:30px;margin-top: 10px;">2k</span></p>
               </div>
 
           </div>
@@ -112,7 +113,7 @@
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Akhil Thankachen - NO EVDE!</br>* Mazhar Jasfin - NO EVDE!</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Sreehari k - NO EVDE!</br>* Arvind sajeev - NO EVDE!</br></p>
               </div>
 
           </div>
