--- a/public/ev_codewars.html
+++ b/public/ev_codewars.html
@@ -61,7 +61,7 @@
   <div class="row" style="padding-top: 10vh;">
      <h1 style="text-align: center;"><span class="spMagenta">< Event ></span></h1>
   <div class="col-md-4">
-  <img src="assets/img/iconbitcoin.png" class="img-responsive pull-center">
+  <img src="assets/img/iconcoding.png" class="img-responsive pull-center">
  <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
   <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
 </div>
@@ -76,19 +76,19 @@
         </div>
             <div class="item-desc">
             
-            <p class="item-heading">Bitcoin_challenge</p>
+            <p class="item-heading">Code_wars  __ THALL KORAKKEDEY!</p>
             <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-7">
-              <p ><span class="spGreen" >//About</span></br>Cryptocurrency is hidden in a system, the participant has to make use  of the vulnerabilities in the system to access the cryptocurrency. The winner gets it all.
+              <p ><span class="spGreen" >//About</span></br>Code Wars is not just any other coding competition that you are bored and tired of. If competing against each other with a time limit doesn’t make you sweat then how about having an audience. If you think you can win this competition by just being a good programmer then you are wrong. If you can make the right decisions when the clock is ticking, where choosing the right question might make or break you, then this the right competition for you. If you can hold yourself together when there is an audience to point out every mistake you make, then this is the right competition for you.
 
-
+If you enjoy coding and think you are up for the challenge, come and fight it out.
 
               </p>
               </div>
 
               <div class="col-md-5">
-              <p><span class="spMagenta">#Date and timing</span></br>24th February 2018</br>9:00 AM to - </br>25th February 2018</br>4:00pm</p>
+              <p><span class="spMagenta">#Date and timing</span></br>25th February 2018</br>9:00 AM to - 4:30 PM</p>
               </div>
 
           </div>
@@ -96,10 +96,10 @@
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-8">
-              <p ><span class="spPurple" > >>>Event Rules</span></br>* Teams of two may participate</br>* Please refrain from helping your friends.</br>* There is no other restriction on participation.</p>
+              <p ><span class="spPurple" > >>>Event Rules</span></br>* RULE_ILLA</br>* RULE_ILLA</br>* RULE_ILLA</p>
               </div>
               <div class="col-md-2">
-              <p><span class="spOrange">$Prize</span></p><p></br><span style="font-size:60px;margin-top: 10px;">20k</span></p>
+              <p><span class="spOrange">$Prize-First</span></p><p></br><span style="font-size:60px;margin-top: 10px;">11k</span></p>
               </div>
 
           </div>
@@ -112,7 +112,7 @@
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Akhil Thankachen - NO EVDE!</br>* Mazhar Jasfin - NO EVDE!</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Amal S. Raj- NO EVDE!</br>* Krishnanunni R - NO EVDE!</br></p>
               </div>
 
           </div>
