--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -346,7 +346,7 @@
   <div class="row" style="margin:auto">
     <h1 style="text-align: center;"><span class="spMagenta">< Events ></span></h1>
     <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/bitcoin_challenge/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -358,7 +358,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/women_coder';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -370,7 +370,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/code_wars/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -382,7 +382,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/debugger/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -396,7 +396,7 @@
 
 
   <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/quiz/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -408,7 +408,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/gaming/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -420,7 +420,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/reverse_coding/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -432,7 +432,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
