--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -349,7 +349,7 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <img src="assets/img/iconbitcoin.png" style="height: 250px;margin: auto;display: inherit;padding-top: 30px;">
+  <img src="assets/img/iconbitcoin.png" >
   <p style="text-align: center;margin-top: 18px;">< Bitcoin_challenge ></p>
   <p class="prize">$prize:20k</p>
 </div>
@@ -361,7 +361,7 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-   <img src="assets/img/iconwomencoding.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 40px;padding-top: 30px;">
+   <img src="assets/img/iconwomencoding.png">
   <p style="text-align: center;margin-top: 18px;">< Women_coder ></p>
   <p class="prize">$prize:20k</p>
 </div>
@@ -373,7 +373,7 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <img src="assets/img/iconcoding.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <img src="assets/img/iconcoding.png">
   <p style="text-align: center;margin-top: 18px;">< code_wars ></p>
   <p class="prize">$prize:11k</p>
 </div>
@@ -385,7 +385,7 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <img src="assets/img/icondebugging.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <img src="assets/img/icondebugging.png">
   <p style="text-align: center;margin-top: 18px;">< Debugger ></p>
   <p class="prize">$prize:8k</p>
 </div>
@@ -399,7 +399,7 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <img src="assets/img/iconquiz.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <img src="assets/img/iconquiz.png">
   <p style="text-align: center;margin-top: 18px;">< ./Quiz ></p>
   <p class="prize">$prize:20k</p>
 </div>
@@ -411,7 +411,7 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <img src="assets/img/icongaming.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <img src="assets/img/icongaming.png">
   <p style="text-align: center;margin-top: 18px;">< Gaming ></p>
   <p class="prize">$prize:13k</p>
 </div>
@@ -423,7 +423,7 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <img src="assets/img/iconreversecoding.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <img src="assets/img/iconreversecoding.png">
   <p style="text-align: center;margin-top: 18px;">< reverse_coding ></p>
   <p class="prize">$prize:8k</p>
 </div>
@@ -435,7 +435,7 @@
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
-  <img src="assets/img/icon obscura.png" style="height: 250px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <img src="assets/img/icon obscura.png">
   <p style="text-align: center;margin-top: 18px;">< Obscura ></p>
   <p class="prize">$prize:6k</p>
 </div>
