added data events

--- a/public/event/bitcoin_challenge/index.html
+++ b/public/event/bitcoin_challenge/index.html
@@ -112,7 +112,7 @@
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Akhil Thankachen - NO EVDE!</br>* Mazhar Jasfin - NO EVDE!</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Akhil Thankachen - 8086432469</br>* Mazhar Jasfin - 9495893166</br></p>
               </div>
 
           </div>
