--- a/public/event/code_wars/index.html
+++ b/public/event/code_wars/index.html
@@ -76,13 +76,11 @@
         </div>
             <div class="item-desc">
             
-            <p class="item-heading">Code_wars  __ THALL KORAKKEDEY!</p>
+            <p class="item-heading">Code_wars </p>
             <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-7">
-              <p ><span class="spGreen" >//About</span></br>Code Wars is not just any other coding competition that you are bored and tired of. If competing against each other with a time limit doesn’t make you sweat then how about having an audience. If you think you can win this competition by just being a good programmer then you are wrong. If you can make the right decisions when the clock is ticking, where choosing the right question might make or break you, then this the right competition for you. If you can hold yourself together when there is an audience to point out every mistake you make, then this is the right competition for you.
-
-If you enjoy coding and think you are up for the challenge, come and fight it out.
+              <p ><span class="spGreen" >//About</span></br>Code Wars is not just any other coding competition that you are bored and tired of. If competing against each other with a time limit doesn’t make you sweat then how about having an audience. If you can make the right decisions when the clock is ticking, where choosing the right question might make or break you, then this the right competition for you. 
 
               </p>
               </div>
@@ -96,7 +94,7 @@ If you enjoy coding and think you are up for the challenge, come and fight it ou
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-8">
-              <p ><span class="spPurple" > >>>Event Rules</span></br>* RULE_ILLA</br>* RULE_ILLA</br>* RULE_ILLA</p>
+              <p ><span class="spPurple" > >>>Event Rules</span></br>* Teams of max. 4</br>* Please refrain from helping your friends.</br>* There is no other restriction on participation.</p>
               </div>
               <div class="col-md-2">
               <p><span class="spOrange">$Prize-First</span></p><p></br><span style="font-size:60px;margin-top: 10px;">11k</span></p>
@@ -112,7 +110,7 @@ If you enjoy coding and think you are up for the challenge, come and fight it ou
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Amal S. Raj- NO EVDE!</br>* Krishnanunni R - NO EVDE!</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Amal S. Raj- 7907887327</br>* Krishnanunni R - 8281177048</br></p>
               </div>
 
           </div>
