--- a/public/event/debugger/index.html
+++ b/public/event/debugger/index.html
@@ -95,7 +95,7 @@
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-8">
-              <p ><span class="spPurple" > >>>Event Rules</span></br>* A team can consist of utmost 2 members</br>* The participants will be timed to determine who does better</br>* No help will be provided by the coordinators (ith veno!!!)</p>
+              <p ><span class="spPurple" > >>>Event Rules</span></br>* A team can consist of atmost 2 members</br>* Time will be monitored to determine the winner</p>
               </div>
               <div class="col-md-4">
               <p><span class="spOrange">$Prizes</span></p><p>* First - <span style="font-size:30px;margin-top: 10px;">5k</span></p>
@@ -112,7 +112,7 @@
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Sooraj - NO EVDE!</br>* Sreedev - NO EVDE!</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Sooraj - NO EVDE!</br>* Sreedev - 7736480946</br></p>
               </div>
 
           </div>
