--- a/public/event/quiz/index.html
+++ b/public/event/quiz/index.html
@@ -80,9 +80,7 @@
             <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-7">
-              <p ><span class="spGreen" >//About</span></br>ILLA? ENTH???!
-
-
+              <p ><span class="spGreen" >//About</span></br>General quiz with technical flavour
               </p>
               </div>
 
@@ -95,7 +93,7 @@
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-8">
-              <p ><span class="spPurple" > >>>Event Rules</span></br>* Cross college teams are allowed.</br>* Participants should have a valid college id card</br>* Reg fee 150 per head</p>
+              <p ><span class="spPurple" > >>>Event Rules</span></br>* Cross college teams are allowed.</br>* Participants should have a valid college id</br>* Reg fee 150 per head</p>
               </div>
               <div class="col-md-4">
               <p><span class="spOrange">$Prizes</span></p><p>* First - <span style="font-size:30px;margin-top: 10px;">5k</span></p>
@@ -113,7 +111,7 @@
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Sreehari k - NO EVDE!</br>* Arvind sajeev - NO EVDE!</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Sreehari k - 9745371206</br>* Arvind sajeev - 9633565848</br></p>
               </div>
 
           </div>
