--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -539,7 +539,7 @@ modal code
         <div class="cn-wrapper" id="cn-wrapper">
             <ul>
               <li><a href="#"></a></li>
-              <li><a href="#"><i class="fa fa-book"></i></a></li>
+              <li><a href="#"><i class="fa fa-laptop"></i></a></li>
               <li><a href="#"><i class="fa fa-home"></i></a></li>
                <li><a href="#"><i class="fa fa-flag-checkered"></i></a></li>
               <li><a href="#"><i class="fa fa-users" style="font-size:23px;"></i></a></li>
